--- a/fr/digest/index.html
+++ b/fr/digest/index.html
@@ -1,10 +1,299 @@
-<!doctype html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Résumés politiques (IA) — Presidency Clock</title><link rel="canonical" href="https://presidencyclock.com/fr/digest/">
-<style>body{margin:0;background:#f6f8fd;color:#0c1220;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}.wrap{max-width:900px;margin:28px auto;padding:0 14px}.brand{position:fixed;left:12px;top:10px}.topnav{display:flex;gap:.6rem;justify-content:center;flex-wrap:wrap;margin:42px auto 14px}.topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid rgba(13,17,23,.12);background:#fff;padding:.4rem .7rem;border-radius:999px}ul{line-height:1.6}</style>
-</head><body><div class="brand"><a href="/fr/">← Accueil</a></div>
-<nav class="topnav" aria-label="Menu principal">
-  <a href="/fr/">Accueil</a><a href="/fr/about/">À propos</a><a href="/fr/presidents/">Présidents</a>
-  <a href="/fr/digest/">Résumés</a><a href="/fr/privacy/">Confidentialité</a><a href="/fr/contact/">Contact</a>
-</nav>
-<main class="wrap"><h1>Résumés politiques (IA)</h1><ul><li><em>Édition 1</em> — bientôt.</li></ul></main>
-</body></html>
+<!doctype html>
+<html lang="fr" data-theme="auto">
+<head>
+  <meta charset="utf-8">
+
+  <!-- THEME PACK: appliquer le thème AVANT l'affichage -->
+  <script>
+  (function(){
+    try{
+      var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
+      var darkOS=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme=pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme=(theme==='dark'?'dark':'light');
+      if(pref==='auto' && window.matchMedia){
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e){
+          var t=e.matches?'dark':'light';
+          document.documentElement.setAttribute('data-theme', t);
+          document.documentElement.style.colorScheme=(t==='dark'?'dark':'light');
+          try{ if(window.updateFavicon) updateFavicon(); }catch(_){}
+        });
+      }
+    }catch(e){}
+  })();
+  </script>
+
+  <style>
+  :root{
+    --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+    --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+    --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
+  }
+  [data-theme="dark"]{
+    --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+    --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+    --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa;
+  }
+
+  html,body{height:100%}
+  body{
+    margin:0; background:var(--bg); color:var(--text);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    background-image:
+      radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
+      radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
+      repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
+    background-attachment:fixed,fixed,fixed;
+  }
+  .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 32px}
+  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+
+  /* En-tête + sélecteur de thème */
+  .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
+  .brand{display:flex;align-items:center;gap:.5rem}
+  .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line)}
+  .brand__logo svg{width:20px;height:20px;color:var(--text)}
+  .brand__title{font-weight:800}
+
+  .theme{position:relative}
+  .theme__btn{
+    display:inline-flex;align-items:center;gap:.35rem;
+    background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
+    padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
+  }
+  .theme__menu{
+    position:absolute; right:0; top:40px; min-width:170px; background:var(--surface);
+    border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
+    display:none; padding:6px; z-index:20;
+  }
+  .theme__menu.open{display:block}
+  .theme__opt{display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none}
+  .theme__opt:hover{background:var(--tile-bg)}
+  .badge{font-size:12px;opacity:.75}
+
+  /* Contenu */
+  h1{font-weight:800;margin:8px 0 6px}
+  .sub{opacity:.9;margin:0 0 12px}
+  .card{background:var(--surface);border:1px solid var(--line);border-radius:18px;padding:14px;margin:10px 0}
+  .grid{display:grid;grid-template-columns:1fr;gap:10px}
+  .card h3{margin:.2rem 0 .35rem;font-size:18px}
+  .src{font-size:13px;opacity:.85}
+  .ad{display:flex;justify-content:center;align-items:center;margin:12px 0}
+  ul{padding-left:18px}
+  .dates h2{margin:.6rem 0 .4rem}
+  </style>
+
+  <!-- Favicon adaptatif -->
+  <link id="favicon" rel="icon" type="image/svg+xml" href="">
+  <script>
+    function updateFavicon(){
+      try{
+        var c=getComputedStyle(document.documentElement).getPropertyValue('--text').trim()||'#0c1220';
+        var svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+c+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
+        var url='data:image/svg+xml,'+encodeURIComponent(svg);
+        var link=document.getElementById('favicon'); if(link) link.href=url;
+      }catch(e){}
+    }
+    (function(){ updateFavicon(); })();
+  </script>
+
+  <!-- Meta -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Synthèses — Presidency Clock</title>
+  <meta name="description" content="Courtes synthèses d’actualité politique rédigées par IA. Mise à jour : deux fois par jour.">
+  <link rel="canonical" href="https://presidencyclock.com/fr/digest/">
+  <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+  <meta name="theme-color" content="#f6f8fd">
+</head>
+<body>
+  <div class="wrap">
+    <!-- En-tête avec sélecteur de thème -->
+    <div class="topbar">
+      <div class="brand">
+        <a class="brand__logo" href="/fr/" aria-label="Presidency Clock">
+          <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
+        </a>
+        <div class="brand__title">Presidency&nbsp;Clock</div>
+      </div>
+
+      <div class="theme" id="themeBox">
+        <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
+          <span id="themeLabel">Thème : auto</span>
+        </button>
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Changer de thème">
+          <div class="theme__opt" data-value="auto"  role="menuitem">Auto <span class="badge">selon le système</span></div>
+          <div class="theme__opt" data-value="light" role="menuitem">Clair</div>
+          <div class="theme__opt" data-value="dark"  role="menuitem">Sombre</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Navigation -->
+    <nav class="card" aria-label="Navigation">
+      <a href="/fr/">Accueil</a> •
+      <a href="/fr/presidents/">Présidents</a> •
+      <a href="/fr/digest/">Synthèses</a> •
+      <a href="/fr/about/">À propos</a> •
+      <a href="/fr/contact/">Contact</a>
+    </nav>
+
+    <h1>Synthèses politiques</h1>
+    <p class="sub">Courtes synthèses d’actualité politique. <b>Mises à jour : deux fois par jour.</b></p>
+
+    <div class="ad ad--top">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+
+    <!-- Dernière édition -->
+    <section id="latest" class="card" style="display:none">
+      <h2 id="latestTitle" style="margin:.2rem 0 .6rem;font-size:20px">Dernière édition</h2>
+      <div class="grid" id="previewGrid"></div>
+      <p id="fullLinkWrap" style="margin-top:8px"></p>
+    </section>
+
+    <!-- Archive -->
+    <section class="dates card">
+      <h2>Archive</h2>
+      <ul id="datesList"><li>Chargement…</li></ul>
+    </section>
+
+    <div class="ad ad--bottom">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="5432245255" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+  </div>
+
+  <!-- Logique du sélecteur de thème -->
+  <script>
+  (function(){
+    var btn  = document.getElementById('themeBtn');
+    var menu = document.getElementById('themeMenu');
+    var lab  = document.getElementById('themeLabel');
+
+    function currentPref(){ return (localStorage.getItem('theme')||'auto').toLowerCase(); }
+    function labelFrom(pref){ return pref==='auto' ? 'auto' : (pref==='light'?'clair':'sombre'); }
+
+    function applyTheme(pref){
+      localStorage.setItem('theme', pref);
+      var darkOS = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme  = pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+      lab.textContent = 'Thème : ' + labelFrom(pref);
+      try{ updateFavicon(); }catch(_){}
+    }
+    function toggleMenu(open){
+      var willOpen = (open!==undefined ? open : !menu.classList.contains('open'));
+      menu.classList.toggle('open', willOpen);
+      btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
+    }
+    lab.textContent = 'Thème : ' + labelFrom(currentPref());
+    applyTheme(currentPref());
+    btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
+    menu.querySelectorAll('.theme__opt').forEach(function(opt){
+      opt.addEventListener('click', function(){ applyTheme(this.getAttribute('data-value')); toggleMenu(false); });
+    });
+    document.addEventListener('click', function(e){
+      if(!menu.contains(e.target) && !btn.contains(e.target)) toggleMenu(false);
+    });
+    document.addEventListener('keydown', function(e){ if(e.key==='Escape') toggleMenu(false); });
+    window.__setTheme = applyTheme;
+  })();
+  </script>
+
+  <!-- Construire l’archive + aperçu (30 jours en arrière) -->
+  <script>
+  (function(){
+    const BASE = '/fr/digest/';
+    const DAYS_TO_SCAN = 30;
+    const datesFound = [];
+
+    function iso(d){
+      const y=d.getFullYear();
+      const m=String(d.getMonth()+1).padStart(2,'0');
+      const dd=String(d.getDate()).padStart(2,'0');
+      return `${y}-${m}-${dd}`;
+    }
+
+    async function tryDate(dateStr){
+      try{
+        const res = await fetch(`${BASE}${dateStr}/items.json`, {cache:'no-store'});
+        if(!res.ok) return null;
+        const data = await res.json();
+        return Array.isArray(data) ? data : null;
+      }catch(e){ return null; }
+    }
+
+    function renderArchive(){
+      const ul = document.getElementById('datesList');
+      ul.innerHTML = '';
+      if(datesFound.length===0){
+        ul.innerHTML = '<li>Pas encore d’éditions</li>';
+        return;
+      }
+      datesFound.forEach(d=>{
+        const li=document.createElement('li');
+        li.innerHTML=`<a href="${BASE}${d}/">${d}</a>`;
+        ul.appendChild(li);
+      });
+    }
+
+    function renderPreview(dateStr, items){
+      const latest = document.getElementById('latest');
+      const title  = document.getElementById('latestTitle');
+      const grid   = document.getElementById('previewGrid');
+      const linkW  = document.getElementById('fullLinkWrap');
+
+      title.textContent = `Dernière édition — ${dateStr}`;
+      grid.innerHTML = '';
+      items.slice(0,3).forEach(it=>{
+        const card=document.createElement('div');
+        card.className='card';
+        card.innerHTML = `
+          <h3>${it.headline}</h3>
+          <p>${it.summary}</p>
+          <div class="src"><a href="${it.url}" target="_blank" rel="nofollow noopener">Source</a> — ${it.source}</div>
+        `;
+        grid.appendChild(card);
+      });
+      linkW.innerHTML = `<a href="${BASE}${dateStr}/">Voir l’édition complète</a>`;
+      latest.style.display = '';
+    }
+
+    (async function(){
+      const today = new Date();
+      let previewDone = false;
+
+      for(let i=0;i<DAYS_TO_SCAN;i++){
+        const d = new Date(today.getTime() - i*86400000);
+        const s = iso(d);
+        const arr = await tryDate(s);
+        if(arr && arr.length){
+          datesFound.push(s);
+          if(!previewDone){
+            renderPreview(s, arr);
+            previewDone = true;
+          }
+        }
+      }
+      renderArchive();
+    })();
+  })();
+  </script>
+
+  <!-- AdSense loader -->
+  <script>
+    (function(){
+      const s=document.createElement('script'); s.async=true;
+      s.src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725';
+      s.crossOrigin='anonymous';
+      s.onload=function(){ try{ const arr=(window.adsbygoogle=window.adsbygoogle||[]); document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({})); }catch(e){} };
+      document.head.appendChild(s);
+    })();
+  </script>
+</body>
+</html>
