--- a/de/contact/index.html
+++ b/de/contact/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- THEME PACK -->
+  <!-- THEME PACK: Thema VOR Render setzen -->
   <script>
   (function(){
     try{
       var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
       var darkOS=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-      var theme=pref==='auto' ? (darkOS?'dark':'light') : pref;
+      var theme = pref==='auto' ? (darkOS?'dark':'light') : pref;
       document.documentElement.setAttribute('data-theme', theme);
-      document.documentElement.style.colorScheme=(theme==='dark'?'dark':'light');
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
       if(pref==='auto' && window.matchMedia){
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e){
           var t=e.matches?'dark':'light';
           document.documentElement.setAttribute('data-theme', t);
-          document.documentElement.style.colorScheme=(t==='dark'?'dark':'light');
+          document.documentElement.style.colorScheme = (t==='dark'?'dark':'light');
           try{ if(window.updateFavicon) updateFavicon(); }catch(_){}
         });
       }
@@ -24,76 +24,104 @@
   })();
   </script>
 
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Kontakt — Presidency Clock</title>
+  <meta name="description" content="Schreiben Sie dem Team von Presidency Clock: E-Mail oder Schnellnachricht.">
+  <link rel="canonical" href="https://presidencyclock.com/de/contact/">
+  <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+  <meta name="theme-color" content="#f6f8fd">
+
   <style>
-  :root{
-    --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
-    --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
-    --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
-  }
-  [data-theme="dark"]{
-    --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
-    --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
-    --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa;
-  }
+    :root{
+      --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+      --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+      --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
+    }
+    [data-theme="dark"]{
+      --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+      --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+      --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa;
+    }
 
-  html,body{height:100%}
-  body{
-    margin:0; background:var(--bg); color:var(--text);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-    background-image:
-      radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
-      radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
-      repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
-    background-attachment:fixed,fixed,fixed;
-  }
-  .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 32px}
-  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+    *{ box-sizing:border-box }
+    html,body{height:100%}
+    body{
+      margin:0; background:var(--bg); color:var(--text);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background-image:
+        radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
+        radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
+        repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
+      background-attachment:fixed,fixed,fixed;
+    }
+    .wrap{max-width:1040px;margin:0 auto;padding:18px 14px 32px}
+    a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
 
-  /* Header + Themenswitch */
-  .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
-  .brand{display:flex;align-items:center;gap:.5rem}
-  .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line)}
-  .brand__logo svg{width:20px;height:20px;color:var(--text)}
-  .brand__title{font-weight:800}
+    /* Kopfzeile + Themen-Umschalter */
+    .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
+    .brand{display:flex;align-items:center;gap:.5rem}
+    .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;
+      border-radius:8px;background:var(--surface);border:1px solid var(--line)}
+    .brand__logo svg{width:20px;height:20px;color:var(--text)}
+    .brand__title{font-weight:800}
 
-  .theme{position:relative}
-  .theme__btn{
-    display:inline-flex;align-items:center;gap:.35rem;
-    background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
-    padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
-  }
-  .theme__menu{
-    position:absolute; right:0; top:40px; min-width:160px; background:var(--surface);
-    border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
-    display:none; padding:6px; z-index:20;
-  }
-  .theme__menu.open{display:block}
-  .theme__opt{display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none}
-  .theme__opt:hover{background:var(--tile-bg)}
-  .badge{font-size:12px;opacity:.75}
+    .theme{position:relative}
+    .theme__btn{
+      display:inline-flex;align-items:center;gap:.4rem;
+      background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
+      padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
+    }
+    .theme__menu{
+      position:absolute; right:0; top:40px; min-width:160px; background:var(--surface);
+      border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
+      display:none; padding:6px; z-index:20;
+    }
+    .theme__menu.open{display:block}
+    .theme__opt{display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none}
+    .theme__opt:hover{background:var(--tile-bg)}
+    .badge{font-size:12px;opacity:.75}
 
-  /* Content */
-  h1{font-weight:800;margin:8px 0 6px}
-  .card{background:var(--surface);border:1px solid var(--line);border-radius:18px;padding:14px;margin:10px 0}
-  .row{display:grid;grid-template-columns:1fr;gap:12px}
-  .label{font-weight:700;margin-bottom:6px}
-  .muted{opacity:.8}
-  .btn{
-    display:inline-flex;align-items:center;gap:.4rem;cursor:pointer;
-    background:var(--btn-bg);border:1px solid var(--line);border-radius:10px;
-    padding:8px 12px;font-weight:700;color:var(--text);text-decoration:none;
-  }
-  .btn:hover{background:var(--tile-bg)}
-  .ad{display:flex;justify-content:center;align-items:center;margin:12px 0}
-  input,textarea{
-    width:100%;padding:10px;border:1px solid var(--line);border-radius:10px;background:var(--surface);color:var(--text);
-    font:inherit;
-  }
-  textarea{min-height:120px;resize:vertical}
-  form .actions{display:flex;gap:10px;flex-wrap:wrap}
+    /* Inhalt */
+    h1{font-weight:800;margin:8px 0 6px}
+    .muted{opacity:.85}
+
+    /* Grid & Karten */
+    .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .col{min-width:0}
+    .narrow{max-width:720px}
+    @media (max-width:900px){ .row{grid-template-columns:1fr} .narrow{max-width:100%} }
+
+    .card{
+      background:var(--surface);border:1px solid var(--line);border-radius:16px;
+      padding:14px;margin:10px 0;
+    }
+
+    /* Minimalistisches Formular */
+    .form{display:grid;gap:10px}
+    label{font-weight:700;margin-bottom:4px;display:inline-block}
+    input,textarea{
+      width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;
+      background:var(--surface);color:var(--text);font:inherit;outline:none;
+    }
+    textarea{min-height:140px;resize:vertical}
+    .actions{display:flex;gap:10px;flex-wrap:wrap}
+    .btn{
+      display:inline-flex;align-items:center;gap:.4rem;cursor:pointer;
+      background:var(--btn-bg);border:1px solid var(--line);border-radius:10px;
+      padding:8px 12px;font-weight:700;color:var(--text);text-decoration:none;
+    }
+    .btn:hover{background:var(--tile-bg)}
+
+    .emailLine{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .emailText{font-weight:700}
+
+    .nav{background:var(--surface);border:1px solid var(--line);border-radius:12px;padding:10px;margin:6px 0 12px}
+
+    .ad{display:flex;justify-content:center;align-items:center;margin:12px 0}
+    .ad--top{min-height:90px}.ad--bottom{min-height:90px}
   </style>
 
-  <!-- Favicon -->
+  <!-- Favicon passt sich dem Thema an -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
   <script>
     function updateFavicon(){
@@ -106,22 +134,18 @@
     }
     (function(){ updateFavicon(); })();
   </script>
-
-  <!-- Meta -->
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Kontakt — Presidency Clock</title>
-  <meta name="description" content="Kontakt zur Presidency-Clock-Redaktion: E-Mail, schnelle Nachricht, Feedback.">
-  <link rel="canonical" href="https://presidencyclock.com/de/contact/">
-  <meta name="google-adsense-account" content="ca-pub-5023415479696725">
-  <meta name="theme-color" content="#f6f8fd">
 </head>
 <body>
   <div class="wrap">
-    <!-- Header -->
+    <!-- Kopfzeile -->
     <div class="topbar">
       <div class="brand">
         <a class="brand__logo" href="/de/" aria-label="Presidency Clock">
-          <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
+          <svg viewBox="0 0 32 32" aria-hidden="true">
+            <g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path>
+            </g>
+          </svg>
         </a>
         <div class="brand__title">Presidency&nbsp;Clock</div>
       </div>
@@ -130,7 +154,7 @@
         <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
           <span id="themeLabel">Thema: auto</span>
         </button>
-        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Thema wechseln">
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Thema ändern">
           <div class="theme__opt" data-value="auto"  role="menuitem">Auto <span class="badge">System</span></div>
           <div class="theme__opt" data-value="light" role="menuitem">Hell</div>
           <div class="theme__opt" data-value="dark"  role="menuitem">Dunkel</div>
@@ -139,7 +163,7 @@
     </div>
 
     <!-- Navigation -->
-    <nav class="card" aria-label="Navigation">
+    <nav class="nav" aria-label="Navigation">
       <a href="/de/">Startseite</a> •
       <a href="/de/presidents/">Präsidenten</a> •
       <a href="/de/digest/">Digest</a> •
@@ -148,7 +172,7 @@
     </nav>
 
     <h1>Kontakt</h1>
-    <p class="muted">Schreiben Sie uns eine Idee, Frage oder einen Bugreport.</p>
+    <p class="muted">Schreiben Sie uns – wir antworten zeitnah.</p>
 
     <div class="ad ad--top">
       <ins class="adsbygoogle" style="display:block;min-height:90px"
@@ -156,38 +180,38 @@
            data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
-    <!-- Kontaktkarte -->
-    <section class="card">
-      <div class="label">E-Mail</div>
-      <!-- Anti-Spam: Adresse aus Teilen zusammensetzen -->
-      <p>
-        <a id="mail" href="#" data-user="hello" data-domain="presidencyclock.com" data-subject="Frage zur Website">zum Schreiben klicken</a>
-        <button class="btn" id="copyEmail" type="button" aria-label="E-Mail kopieren">E-Mail kopieren</button>
-      </p>
-      <p class="muted">Bitte nennen Sie im Betreff kurz den Grund (z. B. „Werbungsvorschlag“).</p>
-    </section>
+    <div class="row narrow">
+      <!-- E-Mail-Karte -->
+      <section class="card col" aria-labelledby="emailTitle">
+        <h2 id="emailTitle" style="margin:.2rem 0 .4rem;font-size:18px">E-Mail-Adresse</h2>
+        <div class="emailLine">
+          <span class="emailText" id="emailText">presidencyclock@gmail.com</span>
+          <a class="btn" id="emailLink" href="mailto:presidencyclock@gmail.com" aria-label="E-Mail schreiben">Schreiben</a>
+          <button class="btn" id="copyEmail" type="button" aria-label="E-Mail kopieren">Kopieren</button>
+        </div>
+        <p class="muted" style="margin-top:8px">Bitte geben Sie den Grund kurz im Betreff an (z.&nbsp;B. „Werbevorschlag“).</p>
+      </section>
 
-    <!-- Schnelle Nachricht via Mail-Client -->
-    <section class="card">
-      <div class="label">Schnelle Nachricht</div>
-      <form id="mailtoForm">
-        <div class="row">
+      <!-- Schnellnachricht -->
+      <section class="card col" aria-labelledby="quickTitle">
+        <h2 id="quickTitle" style="margin:.2rem 0 .4rem;font-size:18px">Schnellnachricht</h2>
+        <form id="mailtoForm" class="form" novalidate>
           <div>
-            <label for="subj" class="label">Betreff</label>
-            <input id="subj" name="subject" placeholder="Betreff der Nachricht" required>
+            <label for="subj">Betreff</label>
+            <input id="subj" name="subject" placeholder="Kurzer Betreff" required maxlength="120">
           </div>
           <div>
-            <label for="msg" class="label">Nachricht</label>
-            <textarea id="msg" name="message" placeholder="Ihre Nachricht …" required></textarea>
+            <label for="msg">Nachricht</label>
+            <textarea id="msg" name="message" placeholder="Ihr Text…" required></textarea>
           </div>
-        </div>
-        <div class="actions" style="margin-top:10px">
-          <button class="btn" type="submit">Im Mailprogramm öffnen</button>
-          <button class="btn" type="reset">Zurücksetzen</button>
-        </div>
-        <p class="muted" style="margin-top:8px">Das Formular öffnet Ihren Standard-Mailclient mit vorausgefüllten Feldern.</p>
-      </form>
-    </section>
+          <div class="actions">
+            <button class="btn" type="submit">Im E-Mail öffnen</button>
+            <button class="btn" type="reset">Zurücksetzen</button>
+          </div>
+          <p class="muted">Die Schaltfläche öffnet Ihr E-Mail-Programm mit vorausgefüllten Feldern. Die Nachricht geht an <b>presidencyclock@gmail.com</b>.</p>
+        </form>
+      </section>
+    </div>
 
     <div class="ad ad--bottom">
       <ins class="adsbygoogle" style="display:block;min-height:90px"
@@ -196,7 +220,7 @@
     </div>
   </div>
 
-  <!-- Theme switcher logic -->
+  <!-- Themen-Umschalter (global) -->
   <script>
   (function(){
     var btn  = document.getElementById('themeBtn');
@@ -220,8 +244,10 @@
       menu.classList.toggle('open', willOpen);
       btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
     }
+
     lab.textContent = 'Thema: ' + labelFrom(currentPref());
     applyTheme(currentPref());
+
     btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
     menu.querySelectorAll('.theme__opt').forEach(function(opt){
       opt.addEventListener('click', function(){ applyTheme(this.getAttribute('data-value')); toggleMenu(false); });
@@ -234,21 +260,15 @@
   })();
   </script>
 
-  <!-- E-Mail zusammenbauen, kopieren & Mailto-Form -->
+  <!-- E-Mail kopieren + mailto aus dem Formular -->
   <script>
   (function(){
-    var a = document.getElementById('mail');
-    var u = a.getAttribute('data-user');
-    var d = a.getAttribute('data-domain');
-    var s = a.getAttribute('data-subject') || '';
-    var email = u + '@' + d;
-    a.textContent = email;
-    a.href = 'mailto:' + email + (s ? ('?subject=' + encodeURIComponent(s)) : '');
+    var EMAIL = 'presidencyclock@gmail.com';
 
     var copyBtn = document.getElementById('copyEmail');
     copyBtn.addEventListener('click', function(){
       try{
-        navigator.clipboard.writeText(email).then(function(){
+        navigator.clipboard.writeText(EMAIL).then(function(){
           var old = copyBtn.textContent;
           copyBtn.textContent = 'Kopiert!';
           setTimeout(function(){ copyBtn.textContent = old; }, 1200);
@@ -259,9 +279,21 @@
     var form = document.getElementById('mailtoForm');
     form.addEventListener('submit', function(e){
       e.preventDefault();
-      var subj = document.getElementById('subj').value.trim();
-      var msg  = document.getElementById('msg').value.trim();
-      var link = 'mailto:' + email + '?subject=' + encodeURIComponent(subj) + '&body=' + encodeURIComponent(msg);
+      var subj = (document.getElementById('subj').value || '').trim();
+      var msg  = (document.getElementById('msg').value  || '').trim();
+      if(!subj){ document.getElementById('subj').focus(); return; }
+      if(!msg){ document.getElementById('msg').focus(); return; }
+
+      var bodyLines = [
+        msg,
+        '',
+        '— gesendet von der Kontaktseite von Presidency Clock'
+      ].join('\n');
+
+      var link = 'mailto:' + EMAIL
+        + '?subject=' + encodeURIComponent(subj)
+        + '&body='    + encodeURIComponent(bodyLines);
+
       window.location.href = link;
     });
   })();
@@ -273,7 +305,10 @@
       const s=document.createElement('script'); s.async=true;
       s.src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725';
       s.crossOrigin='anonymous';
-      s.onload=function(){ try{ const arr=(window.adsbygoogle=window.adsbygoogle||[]); document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({})); }catch(e){} };
+      s.onload=function(){ try{
+        const arr=(window.adsbygoogle=window.adsbygoogle||[]);
+        document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({}));
+      }catch(e){} };
       document.head.appendChild(s);
     })();
   </script>
